tests/More/Bad/4.tig
/* Type mismatch */
800 <> true


